# sponge

./: .gitignore  AUTHORS  LICENSE  LICENSE.header  Makefile.am  README  autogen.sh  configure.ac
examples/: Makefile.am
examples/net/: Makefile.am
examples/net/echo/: Makefile.am  echo-client.cc  echo-server.cc
include/sponge/: client-watch-manager.h  sponge.h  watched-event.h  watcher.h
include/sponge/net/bootstrap/: bootstrap.h  client-bootstrap.h  server-bootstrap.h
include/sponge/net/channel/: channel-config.h  channel-event.h  channel-factory.h  channel-future.h  channel-handler-context.h  channel-handler.h  channel-pipeline-factory.h  channel-pipeline.h  channel-upstream-handler.h  channel.h  channels.h  message-event.h  server-channel-factory.h  simple-channel-upstream-handler.h
include/sponge/net/channel/socket/: client-socket-channel-factory.h  datagram-channel-config.h  datagram-channel-factory.h  datagram-channel.h  default-datagram-channel-config.h  default-server-socket-channel-config.h  default-socket-channel-config.h  server-socket-channel-config.h  server-socket-channel-factory.h  server-socket-channel.h  socket-channel-config.h  socket-channel.h
include/sponge/net/handler/codec/oneone/: one-to-one-decoder.h  one-to-one-encoder.h
include/sponge/net/handler/codec/protobuf/: protobuf-decoder.h  protobuf-encoder.h  protobuf-varint32-frame-decoder.h  protobuf-varint32-length-field-prepender.h
include/sponge/storage/: storage-area.h  storage.h
scripts/: sponge-indexd.sh  sponge-noded.sh
src/: Makefile.am
src/indexd/: Makefile.am  indexd.cc  watch-manager.cc  watch-manager.h
src/net/bootstrap/: bootstrap.cc  client-bootstrap.cc  server-bootstrap.cc
src/net/channel/: simple-channel-upstream-handler.cc
src/net/channel/socket/: default-datagram-channel-config.cc  default-server-socket-channel-config.cc  default-socket-channel-config.cc
src/net/handler/codec/oneone/: one-to-one-decoder.cc  one-to-one-encoder.cc
src/noded/: Makefile.am
src/storage/: leveldb-storage-area.cc  leveldb-storage-area.h  storage.cc
